--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ranjitha.selvam\AppData\Local\Temp\testng-eclipse--1542397915\testng-customsuite.xml</span>
+                    <span>C:\Users\ranjitha.selvam\AppData\Local\Temp\testng-eclipse-39168195\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -147,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ranjitha.selvam\AppData\Local\Temp\testng-eclipse--1542397915\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ranjitha.selvam\AppData\Local\Temp\testng-eclipse-39168195\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -200,16 +200,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'productValidation')
 data.setCell(0, 2, 'com.atmecs.assignment.testscript.TestScript')
-data.setCell(0, 3, 9478);
+data.setCell(0, 3, 11059);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'PageRedirection')
 data.setCell(1, 2, 'com.atmecs.assignment.testscript.TestScript')
-data.setCell(1, 3, 6156);
+data.setCell(1, 3, 1947);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -241,16 +241,16 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">PageRedirection</span>
-                <span class="method-start">3094 ms</span>
+                <span class="method-name">productValidation</span>
+                <span class="method-start">3738 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">productValidation</span>
-                <span class="method-start">9264 ms</span>
+                <span class="method-name">PageRedirection</span>
+                <span class="method-start">14808 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">browserClose</span>
-                <span class="method-start">18744 ms</span>
+                <span class="method-start">16758 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
