--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8cd97f">  <td>19/11/14 10:56:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript.browserLaunch()[pri:0, instance:com.atmecs.assignment.testscript.TestScript@20d28811]">&gt;&gt;browserLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1912962767</td>   <td></td> </tr>
-<tr bgcolor="8cd97f">  <td>19/11/14 10:56:24</td>   <td>3731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript.productValidation()[pri:1, instance:com.atmecs.assignment.testscript.TestScript@20d28811]">productValidation</td> 
-  <td>main@1912962767</td>   <td></td> </tr>
-<tr bgcolor="8cd97f">  <td>19/11/14 10:56:35</td>   <td>14801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript.PageRedirection()[pri:2, instance:com.atmecs.assignment.testscript.TestScript@20d28811]">PageRedirection</td> 
-  <td>main@1912962767</td>   <td></td> </tr>
-<tr bgcolor="8cd97f">  <td>19/11/14 10:56:37</td>   <td>16751</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript.browserClose()[pri:0, instance:com.atmecs.assignment.testscript.TestScript@20d28811]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1912962767</td>   <td></td> </tr>
+<tr bgcolor="b485ba">  <td>19/11/15 19:57:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript.browserLaunch()[pri:0, instance:com.atmecs.assignment.testscript.TestScript@48aaecc3]">&gt;&gt;browserLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@447981768</td>   <td></td> </tr>
+<tr bgcolor="b485ba">  <td>19/11/15 19:57:26</td>   <td>2953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript.productValidation()[pri:1, instance:com.atmecs.assignment.testscript.TestScript@48aaecc3]">productValidation</td> 
+  <td>main@447981768</td>   <td></td> </tr>
+<tr bgcolor="b485ba">  <td>19/11/15 19:57:34</td>   <td>11822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript.PageRedirection()[pri:2, instance:com.atmecs.assignment.testscript.TestScript@48aaecc3]">PageRedirection</td> 
+  <td>main@447981768</td>   <td></td> </tr>
+<tr bgcolor="b485ba">  <td>19/11/15 19:57:37</td>   <td>13963</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript.browserClose()[pri:0, instance:com.atmecs.assignment.testscript.TestScript@48aaecc3]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@447981768</td>   <td></td> </tr>
 </table>
