worked on feedback

--- a/test-output/old/automateninjaStore/classes.html
+++ b/test-output/old/automateninjaStore/classes.html
@@ -4,18 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.atmecs.heatclinic.testscript.HeatClinic</td>
+<td>com.atmecs.ninjastore.testscript.NinjaStore</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>ProductDetails</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>productValidation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>PageRedirection</td>
+<td>homePageValidation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
