--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ranjitha.selvam\AppData\Local\Temp\testng-eclipse-2028677709\testng-customsuite.xml</span>
+                    <span>C:\Users\ranjitha.selvam\AppData\Local\Temp\testng-eclipse--588763036\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,12 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.atmecs.assignment.testscript.TestScript" class="method navigator-link" hash-for-method="PageRedirection">PageRedirection</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.atmecs.heatclinic.testscript.HeatClinic" class="method navigator-link" hash-for-method="PageRedirection">PageRedirection</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.atmecs.assignment.testscript.TestScript" class="method navigator-link" hash-for-method="productValidation">productValidation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.atmecs.heatclinic.testscript.HeatClinic" class="method navigator-link" hash-for-method="productValidation">productValidation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,7 +125,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.atmecs.assignment.testscript.TestScript</span>
+              <span class="class-name">com.atmecs.heatclinic.testscript.HeatClinic</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -147,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ranjitha.selvam\AppData\Local\Temp\testng-eclipse-2028677709\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ranjitha.selvam\AppData\Local\Temp\testng-eclipse--588763036\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +156,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.atmecs.assignment.testscript.TestScript&quot;/&gt;
+      &lt;class name=&quot;com.atmecs.heatclinic.testscript.HeatClinic&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,18 +198,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'productValidation')
-data.setCell(0, 2, 'com.atmecs.assignment.testscript.TestScript')
-data.setCell(0, 3, 8869);
+data.setCell(0, 1, 'PageRedirection')
+data.setCell(0, 2, 'com.atmecs.heatclinic.testscript.HeatClinic')
+data.setCell(0, 3, 31098);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'PageRedirection')
-data.setCell(1, 2, 'com.atmecs.assignment.testscript.TestScript')
-data.setCell(1, 3, 2141);
+data.setCell(1, 1, 'productValidation')
+data.setCell(1, 2, 'com.atmecs.heatclinic.testscript.HeatClinic')
+data.setCell(1, 3, 9318);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 40 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,22 +235,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.atmecs.assignment.testscript.TestScript</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.atmecs.heatclinic.testscript.HeatClinic</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">browserLaunch</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">productValidation</span>
-                <span class="method-start">2969 ms</span>
+                <span class="method-start">8011 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">PageRedirection</span>
-                <span class="method-start">11838 ms</span>
+                <span class="method-start">17337 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">browserClose</span>
-                <span class="method-start">13979 ms</span>
+                <span class="method-start">48439 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
