jenkins parameter configuration

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,22 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">48,523</td><td></td><td></td></tr>
+<tr><th colspan="7">AssessmentTwo</th></tr>
+<tr><th colspan="7">automateninjaStore</th></tr>
+<tr><td><a href="#t0">productvalidation</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,934</td><td></td><td></td></tr>
+<tr><th colspan="7">Automateheatclinic</th></tr>
+<tr class="stripe"><td><a href="#t1">productverification</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">42,114</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">5</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">61,048</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.atmecs.heatclinic.testscript.HeatClinic</td><td><a href="#m0">PageRedirection</a></td><td rowspan="1">1574086133474</td><td rowspan="1">31098</td></tr><tr class="passedeven"><td><a href="#m1">productValidation</a></td><td rowspan="1">1574086124148</td><td rowspan="1">9318</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">AssessmentTwo</th></tr></tbody><tbody><tr><th colspan="4">automateninjaStore</th></tr></tbody><tbody id="t0"><tr><th colspan="4">productvalidation &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.atmecs.ninjastore.testscript.NinjaStore</td><td><a href="#m0">ProductDetails</a></td><td rowspan="1">1574166542217</td><td rowspan="1">2013</td></tr><tr class="passedeven"><td><a href="#m1">homePageValidation</a></td><td rowspan="1">1574166528134</td><td rowspan="1">263</td></tr><tr class="passedeven"><td><a href="#m2">productValidation</a></td><td rowspan="2">1574166535869</td><td rowspan="2">6346</td></tr><tr class="passedeven"><td><a href="#m3">productValidation</a></td></tr></tbody>
+<tbody><tr><th colspan="4">Automateheatclinic</th></tr></tbody><tbody id="t1"><tr><th colspan="4">productverification &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.atmecs.heatclinic.testscript.HeatClinic</td><td><a href="#m4">productValidation</a></td><td rowspan="1">1574166486528</td><td rowspan="1">38653</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.atmecs.heatclinic.testscript.HeatClinic#PageRedirection</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.atmecs.heatclinic.testscript.HeatClinic#productValidation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>productvalidation</h2><h3 id="m0">com.atmecs.ninjastore.testscript.NinjaStore#ProductDetails</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.atmecs.ninjastore.testscript.NinjaStore#homePageValidation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.atmecs.ninjastore.testscript.NinjaStore#productValidation</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th></tr><tr class="param stripe"><td>macbook air</td><td>Availability: In Stock</td><td>$1,202.00</td><td> Ex Tax: $1,000.00</td><td>2</td><td>MacBook Air is ultrathin, ultraportable, and ultra unlike anything else. But you don’t lose inches and pounds overnight. It’s the result of rethinking conventions. Of multiple wireless innovations. And of breakthrough design. With MacBook Air, mobile computing suddenly has a new standard.
+
+</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.atmecs.ninjastore.testscript.NinjaStore#productValidation</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th></tr><tr class="param stripe"><td>iphone</td><td>Availability: In Stock</td><td>$123.20</td><td>Ex Tax: $101.00</td><td>2</td><td>iPhone is a revolutionary new mobile phone that allows you to make a call by simply tapping a name or number in your address book, a favorites list, or a call log. It also automatically syncs all your contacts from a PC, Mac, or Internet service. And it lets you select and listen to voicemail messages in whatever order you want just like email.</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>productverification</h2><h3 id="m4">com.atmecs.heatclinic.testscript.HeatClinic#productValidation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
