--- a/test-output/old/Automateheatclinic/classes.html
+++ b/test-output/old/Automateheatclinic/classes.html
@@ -14,8 +14,42 @@
 <td>productValidation</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
 <td>&nbsp;</td>
-<td>PageRedirection</td>
+<td>browserLaunch</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>browserClose</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>com.atmecs.ninjastore.testscript.NinjaStore</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ProductDetails</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>productValidation</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>homePageValidation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
