--- a/test-output/old/Automateheatclinic/methods.html
+++ b/test-output/old/Automateheatclinic/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automateheatclinic</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b485ba">  <td>19/11/18 11:12:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HeatClinic.browserLaunch()[pri:0, instance:com.atmecs.heatclinic.testscript.HeatClinic@48aaecc3]">&gt;&gt;browserLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@447981768</td>   <td></td> </tr>
-<tr bgcolor="b485ba">  <td>19/11/18 11:12:24</td>   <td>8156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HeatClinic.productValidation()[pri:1, instance:com.atmecs.heatclinic.testscript.HeatClinic@48aaecc3]">productValidation</td> 
-  <td>main@447981768</td>   <td></td> </tr>
-<tr bgcolor="b485ba">  <td>19/11/18 11:12:34</td>   <td>18532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HeatClinic.PageRedirection()[pri:2, instance:com.atmecs.heatclinic.testscript.HeatClinic@48aaecc3]">PageRedirection</td> 
-  <td>main@447981768</td>   <td></td> </tr>
-<tr bgcolor="b485ba">  <td>19/11/18 11:13:05</td>   <td>49077</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HeatClinic.browserClose()[pri:0, instance:com.atmecs.heatclinic.testscript.HeatClinic@48aaecc3]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@447981768</td>   <td></td> </tr>
+<tr bgcolor="94c28c">  <td>19/11/19 17:58:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HeatClinic.browserLaunch()[pri:0, instance:com.atmecs.heatclinic.testscript.HeatClinic@5be6e01c]">&gt;&gt;browserLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1766505436</td>   <td></td> </tr>
+<tr bgcolor="94c28c">  <td>19/11/19 17:58:06</td>   <td>3330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HeatClinic.productValidation()[pri:1, instance:com.atmecs.heatclinic.testscript.HeatClinic@5be6e01c]">productValidation</td> 
+  <td>main@1766505436</td>   <td></td> </tr>
+<tr bgcolor="94c28c">  <td>19/11/19 17:58:45</td>   <td>41996</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HeatClinic.browserClose()[pri:0, instance:com.atmecs.heatclinic.testscript.HeatClinic@5be6e01c]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1766505436</td>   <td></td> </tr>
 </table>
