--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b485ba">  <td>19/11/18 19:38:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HeatClinic.browserLaunch()[pri:0, instance:com.atmecs.heatclinic.testscript.HeatClinic@48aaecc3]">&gt;&gt;browserLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@447981768</td>   <td></td> </tr>
-<tr bgcolor="b485ba">  <td>19/11/18 19:38:44</td>   <td>8003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HeatClinic.productValidation()[pri:1, instance:com.atmecs.heatclinic.testscript.HeatClinic@48aaecc3]">productValidation</td> 
-  <td>main@447981768</td>   <td></td> </tr>
-<tr bgcolor="b485ba">  <td>19/11/18 19:38:53</td>   <td>17329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HeatClinic.PageRedirection()[pri:2, instance:com.atmecs.heatclinic.testscript.HeatClinic@48aaecc3]">PageRedirection</td> 
-  <td>main@447981768</td>   <td></td> </tr>
-<tr bgcolor="b485ba">  <td>19/11/18 19:39:24</td>   <td>48431</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HeatClinic.browserClose()[pri:0, instance:com.atmecs.heatclinic.testscript.HeatClinic@48aaecc3]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@447981768</td>   <td></td> </tr>
+<tr bgcolor="aa6a6a">  <td>19/11/19 17:51:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HeatClinic.browserLaunch()[pri:0, instance:com.atmecs.heatclinic.testscript.HeatClinic@149e0f5d]">&gt;&gt;browserLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1645547422</td>   <td></td> </tr>
+<tr bgcolor="aa6a6a">  <td>19/11/19 17:51:13</td>   <td>3533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HeatClinic.productValidation()[pri:1, instance:com.atmecs.heatclinic.testscript.HeatClinic@149e0f5d]">productValidation</td> 
+  <td>main@1645547422</td>   <td></td> </tr>
+<tr bgcolor="aa6a6a">  <td>19/11/19 17:56:15</td>   <td>306175</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HeatClinic.browserClose()[pri:0, instance:com.atmecs.heatclinic.testscript.HeatClinic@149e0f5d]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1645547422</td>   <td></td> </tr>
 </table>
