--- a/test-output/old/automateninjaStore/methods.html
+++ b/test-output/old/automateninjaStore/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>automateninjaStore</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b485ba">  <td>19/11/18 11:11:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NinjaStore.browserLaunch()[pri:0, instance:com.atmecs.ninjastore.testscript.NinjaStore@65466a6a]">&gt;&gt;browserLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076607567</td>   <td></td> </tr>
-<tr bgcolor="b485ba">  <td>19/11/18 11:11:22</td>   <td>3196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NinjaStore.homePageValidation()[pri:1, instance:com.atmecs.ninjastore.testscript.NinjaStore@65466a6a]">homePageValidation</td> 
-  <td>main@1076607567</td>   <td></td> </tr>
-<tr bgcolor="b485ba">  <td>19/11/18 11:11:23</td>   <td>4539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NinjaStore.productValidation(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.atmecs.ninjastore.testscript.NinjaStore@65466a6a]">productValidation</td> 
-  <td>main@1076607567</td>   <td></td> </tr>
-<tr bgcolor="b485ba">  <td>19/11/18 11:11:32</td>   <td>12992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NinjaStore.productValidation(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.atmecs.ninjastore.testscript.NinjaStore@65466a6a]">productValidation</td> 
-  <td>main@1076607567</td>   <td></td> </tr>
-<tr bgcolor="b485ba">  <td>19/11/18 11:11:41</td>   <td>22555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NinjaStore.ProductDetails()[pri:3, instance:com.atmecs.ninjastore.testscript.NinjaStore@65466a6a]">ProductDetails</td> 
-  <td>main@1076607567</td>   <td></td> </tr>
-<tr bgcolor="b485ba">  <td>19/11/18 11:11:45</td>   <td>26008</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NinjaStore.browserClose()[pri:0, instance:com.atmecs.ninjastore.testscript.NinjaStore@65466a6a]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076607567</td>   <td></td> </tr>
+<tr bgcolor="bb67ed">  <td>19/11/19 17:58:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NinjaStore.browserLaunch()[pri:0, instance:com.atmecs.ninjastore.testscript.NinjaStore@9225652]">&gt;&gt;browserLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1766505436</td>   <td></td> </tr>
+<tr bgcolor="bb67ed">  <td>19/11/19 17:58:48</td>   <td>2816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NinjaStore.homePageValidation()[pri:1, instance:com.atmecs.ninjastore.testscript.NinjaStore@9225652]">homePageValidation</td> 
+  <td>main@1766505436</td>   <td></td> </tr>
+<tr bgcolor="bb67ed">  <td>19/11/19 17:58:49</td>   <td>3882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NinjaStore.productValidation(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.atmecs.ninjastore.testscript.NinjaStore@9225652]">productValidation</td> 
+  <td>main@1766505436</td>   <td></td> </tr>
+<tr bgcolor="bb67ed">  <td>19/11/19 17:58:55</td>   <td>10551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NinjaStore.productValidation(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:2, instance:com.atmecs.ninjastore.testscript.NinjaStore@9225652]">productValidation</td> 
+  <td>main@1766505436</td>   <td></td> </tr>
+<tr bgcolor="bb67ed">  <td>19/11/19 17:59:02</td>   <td>16899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NinjaStore.ProductDetails()[pri:3, instance:com.atmecs.ninjastore.testscript.NinjaStore@9225652]">ProductDetails</td> 
+  <td>main@1766505436</td>   <td></td> </tr>
+<tr bgcolor="bb67ed">  <td>19/11/19 17:59:04</td>   <td>18913</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NinjaStore.browserClose()[pri:0, instance:com.atmecs.ninjastore.testscript.NinjaStore@9225652]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1766505436</td>   <td></td> </tr>
 </table>
